# AoC_2024

./: .gitignore
day01/rust/: Cargo.toml
day01/rust/src/: main.rs
python/day09/: part1.py  part2.py
runner/: main.py  pyproject.toml
runner/aoc/: client.py
runner/claude/: client.py
runner/oai/: client.py
runner/rust/: manager.py
runner/utils/: helpers.py  logger.py  solution.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/day01/: part1.rs  part2.rs
rust/src/day02/: part1.rs  part2.rs
rust/src/day03/: mod.rs  part1.rs  part2.rs
rust/src/day04/: part1.rs  part2.rs
rust/src/day05/: part1.rs  part2.rs
rust/src/day06/: part1.rs  part2.rs
rust/src/day07/: part1.rs  part2.rs
rust/src/day08/: part1.rs  part2.rs
rust/src/day09/: part1.rs  part2.rs
rust/src/day10/: part1.rs  part2.rs
rust/src/day11/: part1.rs  part2.rs
rust/src/day12/: part1.rs  part2.rs
rust/src/day13/: part1.rs  part2.rs
rust/src/day14/: part1.rs
rust/src/day16/: part1.rs
rust/src/day17/: part1.rs
rust/src/day18/: part1.rs  part2.rs
rust/src/day19/: part1.rs  part2.rs
rust/src/utils/: helpers.rs
utils/rust/: Cargo.toml  helpers.rs
