[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["cookies"] }
tokio = { version = "1", features = ["full"] }

[lib]
name = "advent_of_code_2024"
path = "src/lib.rs"

[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"
