[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

[[bin]]
name = "day03_part1"
path = "src/bin/day03_part1.rs"

[[bin]]
name = "day03_part2"
path = "src/bin/day03_part2.rs"

[[bin]]
name = "day04_part1"
path = "src/bin/day04_part1.rs"

[[bin]]
name = "day04_part2"
path = "src/bin/day04_part2.rs"

[[bin]]
name = "day05_part1"
path = "src/bin/day05_part1.rs"

[[bin]]
name = "day05_part2"
path = "src/bin/day05_part2.rs"

[[bin]]
name = "day06_part1"
path = "src/bin/day06_part1.rs"

[[bin]]
name = "day06_part2"
path = "src/bin/day06_part2.rs"

[[bin]]
name = "day07_part1"
path = "src/bin/day07_part1.rs"

[[bin]]
name = "day07_part2"
path = "src/bin/day07_part2.rs"

[[bin]]
name = "day08_part1"
path = "src/bin/day08_part1.rs"

[[bin]]
name = "day08_part2"
path = "src/bin/day08_part2.rs"

[[bin]]
name = "day09_part1"
path = "src/bin/day09_part1.rs"

[[bin]]
name = "day09_part2"
path = "src/bin/day09_part2.rs"

[[bin]]
name = "day10_part2"
path = "src/bin/day10_part2.rs"

[[bin]]
name = "day11_part2"
path = "src/bin/day11_part2.rs"

[[bin]]
name = "day12_part2"
path = "src/bin/day12_part2.rs"

[[bin]]
name = "day13_part2"
path = "src/bin/day13_part2.rs"


[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[lib]
name = "advent_of_code_2024"
path = "src/lib.rs"

[dependencies.regex]
version = "*"

[dependencies.chrono]
version = "*"

[dependencies.reqwest]
version = "*"
features = [ "cookies",]

[dependencies.tokio]
version = "*"
features = [ "full",]

[dependencies.paste]
version = "*"

[dependencies.num]
version = "*"

[dependencies.num-bigint]
version = "*"

[dependencies.num-traits]
version = "*"

[dependencies.num-integer]
version = "*"
